--- a/ramses_app/templates/index.html
+++ b/ramses_app/templates/index.html
@@ -54,9 +54,36 @@
         from, to { border-color: transparent; }
         50% { border-color: black; }
     }
+
+    .dot {
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      margin: 0 0.3rem;
+      border-radius: 50%;
+      background: #007bff;
+      animation: bounce 1s infinite;
+  }
+
+  .dot:nth-child(2) {
+      animation-delay: 0.2s;
+  }
+
+  .dot:nth-child(3) {
+      animation-delay: 0.4s;
+  }
+
+  @keyframes bounce {
+      0%, 80%, 100% {
+          transform: translateY(0);
+      }
+      40% {
+          transform: translateY(-1rem);
+      }
+  }
   </style>
 </head>
-<body class="flex items-center justify-center h-screen">
+<body class="flex items-center justify-center h-screen py-3">
   <div class="flex w-full h-full">
     <div class="flex-1 hidden md:flex items-center justify-center">
       <!-- Placeholder for left-side content -->
@@ -152,18 +179,39 @@
         chatbox.appendChild(messageElement);
         conversationHistory.push({ role: "user", content: message });
         chatbox.scrollTop = chatbox.scrollHeight;
+        const loader = document.createElement('div');
+        loader.id = 'loadingIndicator';
+        loader.className = 'flex space-x-2 my-3';
+    
+        // Create the inner div elements
+        for (let i = 0; i < 3; i++) {
+            const innerDiv = document.createElement('div');
+            innerDiv.className = 'w-3 h-3 bg-[#FFCB00] rounded-full dot';
+            loader.appendChild(innerDiv);
+        }
+    
+        // Append the new div to the desired parent element
+        chatbox.appendChild(loader);
+        chatbox.scrollTop = chatbox.scrollHeight;
+
     }
     
     function addBotMessage(message) {
+      conversationHistory.push({ role: "assistant", content: message });
     const messageElement = document.createElement("div");
     messageElement.classList.add("mb-2");
 
     // Create a paragraph element for the typing animation
     const typingElement = document.createElement("p");
-    typingElement.classList.add("bg-gray-200", "text-gray-700", "rounded-lg", "py-2", "mb-4","px-4", "inline-block", "typing-animation");
+    typingElement.classList.add("bg-gray-200", "text-gray-700", "rounded-lg", "py-2","px-4", "inline-block", "typing-animation");
+
+    if (chatbox.lastElementChild) {
+      chatbox.removeChild(chatbox.lastElementChild);
+      }
 
     // Append the paragraph to the message element
     messageElement.appendChild(typingElement);
+
     chatbox.appendChild(messageElement);
     
     // Start the typing animation
@@ -186,6 +234,7 @@ function typeWriter(text, element, delay = 50) {
           const br = document.createElement('br');
           element.appendChild(br);
           index++;
+
         } else if (char === '<') {
           // Créez un élément HTML si la balise est ouverte
           const tag = text.substring(index, text.indexOf('>', index) + 1);
@@ -195,18 +244,22 @@ function typeWriter(text, element, delay = 50) {
             element.appendChild(elem.firstChild);
           }
           index += tag.length;
+          
         } else {
           // Ajoutez le caractère à l'élément parent
           element.innerHTML += char;
           index++;
         }
+
       } else {
         clearInterval(typing);
         // Remove the blinking cursor after typing is done
         element.classList.remove('typing-animation');
         element.style.borderRight = 'none'; // Remove the cursor effect
         document.getElementById('user-input').disabled = false
-        document.getElementById('send-button').disabled = false;
+        document.getElementById('send-button').disabled = false; 
+        chatbox.scrollTop = chatbox.scrollHeight;
+
       }
       
     }, delay);
